# termipaper

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
docs/: ref.bib  termipaper-docs.tex
docs/sections/: highlights.tex  installation.tex  introduction.tex  usage.tex
src/: database.rs  lib.rs  main.rs  manager.rs  options.rs
tests/: download_assets.sh  restore_config.sh  setup.sh
