[package]
name = "termipaper"
description = "A terminal-based academic paper manager"
repository = "https://github.com/Teddy-van-Jerry/termipaper"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
version = "0.1.0"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = [
    "docs/*",
    "examples/*",
    "target/*",
    "Cargo.lock",
    ".github/*",
    ".vscode/*",
    ".DS_Store",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
