[package]
name = "termipaper"
description = "A terminal-based academic paper manager"
repository = "https://github.com/Teddy-van-Jerry/termipaper"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
version = "0.1.0"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = [
    "docs/*",
    "examples/*",
    "target/*",
    "Cargo.lock",
    ".github/*",
    ".vscode/*",
    ".DS_Store",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5.11", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
